# Quantum-Simulation-Trotter-vs-QSP

./: BCAM_intern_project.toml  Header.py  LICENSE  README.md  pyproject.toml
Algorithms/: LCU.py
Dynamics/: Dynamics.py  Ising.py  quantum_utils.py
Topology/: Interactions.py  Lattice.py
algorithms/: lcu.py  qsvt.py  simulation.py
dynamics/: ising_model.py
topology/: lattice.py
